# exercism_rs

./: Cargo.toml  README.md
armstrong/: Cargo.toml
armstrong/src/: main.rs
beer_song/src/: main.rs
clock/: Cargo.toml
collatz/: Cargo.toml
collatz/src/: main.rs
diff_square/: Cargo.toml
exercism/clock/src/: main.rs
exercism/diff_square/src/: main.rs
exercism/gigaseconds/src/: main.rs
exercism/grains/src/: main.rs
exercism/isbn/src/: main.rs
exercism/pascal_triangle/src/: main.rs
exercism/prime_factor/: Cargo.toml
exercism/prime_nth/: Cargo.toml
exercism/prime_nth/src/: main.rs
exercism/roman/src/: main.rs
gigaseconds/: Cargo.toml
high_scores/src/: main.rs
leap_year/src/: main.rs
matching_brackets/src/: main.rs
pascal_triangle/src/: main.rs
prime_factor/src/: main.rs
raindrops/src/: main.rs
rev_string/: Cargo.toml
rev_string/src/: main.rs
sum_multiples/: Cargo.toml
sum_multiples/src/: main.rs
