[workspace]
resolver = "2"
members = [
    "exercism/gigaseconds",
    "exercism/clock",
    "exercism/rev_string",
    "exercism/armstrong",
    "exercism/leap_year",
    "exercism/diff_square",
    "exercism/prime_nth",
    "exercism/beer_song",
    "exercism/grains",
    "exercism/pascal_triangle",
    "exercism/prime_factor",
    "exercism/high_scores",
    "exercism/isbn",
    "exercism/roman",
    "exercism/matching_brackets",
    "exercism/raindrops"
]
