[workspace]
resolver = "2"
members = [
    "gigaseconds",
    "clock",
    "rev_string",
    "armstrong",
    "leap_year",
    "diff_square",
    "prime_nth",
    "beer_song",
    "grains",
    "pascal_triangle",
    "prime_factor",
    "high_scores",
    "isbn",
    "roman",
    "matching_brackets",
    "raindrops",
    "sum_multiples"
]
